Frontend-React/solve4u-react/src/css/compStyle/compGlobalStyle/SidebarComp.css
.sidebar {
  position: fixed;
  top: 0;
  left: -200px;
  width: 250px;
  height: 100%;
  background-color: #f0f0f0;
  padding: 20px;
  box-sizing: border-box;
  transition: left 0.3s ease;
}

.Aheaders {
  text-decoration: none;
  color: #272727;
}

.closed {
  left: 0.1%;
}

.config {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 40px;
}

.bell {
  display: flex;
  margin-top: 90px;
  margin-bottom: 40px;
  justify-content: space-between;
  align-items: center;
}

.logout {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.theme {
  display: flex;
  margin-top: 20px;
  justify-content: space-between;
  align-items: center;
}

.sidebarmain {
  height: 60%;
}

.sidebarfooter {
  width: 100%;
  height: 30%;
}

.folder {
  display: flex;
  margin-bottom: 40px;
  justify-content: space-between;
  align-items: center;
}
hr {
  width: 108.5%;
}

.sidebar h2 {
  font-size: 1.5rem;
  margin-bottom: 20px;
}

.sidebar ul {
  list-style-type: none;
  padding: 0;
}

.sidebar li {
  align-items: center;
  cursor: pointer;
}

.toggle-icon {
  display: flex;
  justify-content: end;
  top: 20px;
  left: 20px;
  cursor: pointer;
}

